--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -1,9 +1,7 @@
 version: "3.9"
 
 x-airflow-common: &airflow-common
-    build:
-        context: ../airflow
-        dockerfile: airflow.dockerfile
+    image: epitechuser2077/cryptodata:cryptodata-airflow
     depends_on: &airflow-common-depends-on
         redis:
             condition: service_healthy
@@ -171,6 +169,7 @@ services:
         # yamllint enable rule:line-length
         environment:
             <<: *airflow-common-env
+            RATELIMIT_STORAGE_URI: redis://redis:6379/0
             _AIRFLOW_DB_MIGRATE: "true"
             _AIRFLOW_WWW_USER_CREATE: "true"
             _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
@@ -178,7 +177,7 @@ services:
             _PIP_ADDITIONAL_REQUIREMENTS: ""
         user: "0:0"
         volumes:
-            - ${AIRFLOW_PROJ_DIR:-.}:/sources
+            - ${AIRFLOW_DIR:-.}:/sources
 
     airflow-cli:
         <<: *airflow-common
@@ -224,14 +223,12 @@ services:
             - client-db-volume:/var/lib/postgresql/data
 
     client_initdb:
-        build:
-            context: ../db
-            dockerfile: initdb.dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-client_initdb
         command: [ "python", "initdb.py" ]
         environment:
-            POSTGRES_DB: INIT_CLIENT_DB_USER
-            POSTGRES_PASSWORD: INIT_CLIENT_DB_PASSWD
-            POSTGRES_USER: INIT_CLIENT_DB_NAME
+            POSTGRES_DB: $INIT_CLIENT_DB_USER
+            POSTGRES_PASSWORD: $INIT_CLIENT_DB_PASSWD
+            POSTGRES_USER: $INIT_CLIENT_DB_NAME
         depends_on:
             client_db:
                 condition: service_healthy
@@ -276,19 +273,15 @@ services:
           retries: 3
 
     cryptopanic-scraper:
-        build:
-            context: ../scrapers
-            dockerfile: cryptopanic/scraper.dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-cryptopanic-scraper
+        command: ["tail", "-f", "/dev/null"]
 
     binance-scraper:
-        build:
-            context: ../scrapers
-            dockerfile: binance/scraper.dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-binance-scraper
+        command: ["tail", "-f", "/dev/null"]
 
     scraped_consumer:
-        build:
-            context: ../consumers
-            dockerfile: scraped/scraped.dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-scraped_consumer
         command: [ "python", "main.py" ]
         depends_on:
             kafka:
@@ -304,9 +297,7 @@ services:
             - ../consumers/scraped:/home/consumer
 
     spark:
-        build:
-            context: ../spark
-            dockerfile: spark.dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-spark
         ports:
             - "${SPARK_UI_PORT}:8080"
             - "${SPARK_WORKER_PORT}:7077"
@@ -316,16 +307,16 @@ services:
         ports:
             - "${GRAFANA_PORT}:3000"
         environment:
-            GF_SECURITY_ADMIN_USER: $GRAFANA_SECURITY_ADMIN_USER
-            GF_SECURITY_ADMIN_PASSWORD: $GRAFANA_SECURITY_ADMIN_PASSWORD
+            GF_SECURITY_ADMIN_USER: ${GRAFANA_SECURITY_ADMIN_USER}
+            GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_SECURITY_ADMIN_PASSWORD}
+        user: "0:0"
         volumes:
-            - ../grafana/data:/var/lib/grafana
-            - ../grafana/conf:/etc/grafana
+            - ../grafana/conf/grafana.ini:/etc/grafana/grafana.ini
+            - ../grafana/conf/ladp.toml:/etc/grafana/ladp.toml
+            - ../grafana/data:/var/lib/grafana:rw
 
     wss:
-        build:
-            context: ../crypto-wss
-            dockerfile: wss.dockerfile
+        image: epitechuser2077/cryptodata:cryptodata-wss
         volumes:
             - ../crypto-wss:/srv/app
         tty: true
