--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,7 +1,9 @@
 version: "3.9"
 
 x-airflow-common: &airflow-common
-    image: epitechuser2077/cryptodata:cryptodata-airflow
+    build:
+        context: ../
+        dockerfile: ./airflow/airflow.dockerfile
     depends_on: &airflow-common-depends-on
         redis:
             condition: service_healthy
@@ -223,7 +225,9 @@ services:
             - client-db-volume:/var/lib/postgresql/data
 
     client_initdb:
-        image: epitechuser2077/cryptodata:cryptodata-client_initdb
+        build:
+            context: ../
+            dockerfile: ./db/initdb.dockerfile
         command: [ "python", "initdb.py" ]
         environment:
             POSTGRES_DB: $INIT_CLIENT_DB_USER
@@ -273,15 +277,19 @@ services:
           retries: 3
 
     cryptopanic-scraper:
-        image: epitechuser2077/cryptodata:cryptodata-cryptopanic-scraper
-        command: ["tail", "-f", "/dev/null"]
+        build:
+            context: ../
+            dockerfile: ./scrapers/cryptopanic/scraper.dockerfile
 
     binance-scraper:
-        image: epitechuser2077/cryptodata:cryptodata-binance-scraper
-        command: ["tail", "-f", "/dev/null"]
+        build:
+            context: ../
+            dockerfile: scrapers/binance/scraper.dockerfile
 
     scraped_consumer:
-        image: epitechuser2077/cryptodata:cryptodata-scraped_consumer
+        build:
+            context: ../
+            dockerfile: ./consumers/scraped/scraped.dockerfile
         command: [ "python", "main.py" ]
         depends_on:
             kafka:
@@ -296,11 +304,13 @@ services:
         volumes:
             - ../consumers/scraped:/home/consumer
 
-    spark:
-        image: epitechuser2077/cryptodata:cryptodata-spark
-        ports:
-            - "${SPARK_UI_PORT}:8080"
-            - "${SPARK_WORKER_PORT}:7077"
+    # spark:
+    #     build:
+    #         context: ../
+    #         dockerfile: ./spark/spark.dockerfile
+    #     ports:
+    #         - "${SPARK_UI_PORT}:8080"
+    #         - "${SPARK_WORKER_PORT}:7077"
 
     grafana:
         image: grafana/grafana-oss:latest
@@ -316,7 +326,9 @@ services:
             - ../grafana/data:/var/lib/grafana:rw
 
     wss:
-        image: epitechuser2077/cryptodata:cryptodata-wss
+        build:
+            context: ../
+            dockerfile: ./crypto-wss/wss.dockerfile
         volumes:
             - ../crypto-wss:/srv/app
         tty: true
