--- a/env-vars/.env.dev
+++ b/env-vars/.env.dev
@@ -1,5 +1,5 @@
 AIRFLOW_DIR=../airflow
-AIRFLOW_GH_TOKEN=your_github_token
+AIRFLOW_GH_TOKEN=<your-github-token>
 AIRFLOW_UID=1001
 AIRFLOW_WEBSERVER_PORT=8080
 AIRFLOW_WEBSERVER_TEST_CMD_URL=http://localhost:8080/health
@@ -12,13 +12,13 @@ AIRFLOW_DB_USER=airflow
 AIRFLOW_DB_PASSWD=airflow
 AIRFLOW_DB_NAME=airflow
 
-BLOCKCHAIN_API_KEY=your_blockchain_api_key
-
-GH_TOKEN=your_github_token
+BLOCKCHAIN_API_KEY=<your-blockchain-api-key>
 
 CLIENT_DB_USER=client
 CLIENT_DB_PASSWD=client
 CLIENT_DB_NAME=client
+
+GH_TOKEN=<your-github-token>
 
 INIT_CLIENT_DB_USER=client
 INIT_CLIENT_DB_PASSWD=client
