--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -23,10 +23,15 @@ x-airflow-common: &airflow-common
         GH_TOKEN: ${PROD_AIRFLOW_GH_TOKEN}
     user: "${PROD_AIRFLOW_UID:-50000}:0"
     volumes:
-        - ${AIRFLOW_DIR:-.}/dags:/opt/airflow/dags
-        - ${AIRFLOW_DIR:-.}/logs:/opt/airflow/logs
-        - ${AIRFLOW_DIR:-.}/config:/opt/airflow/config
-        - ${AIRFLOW_DIR:-.}/plugins:/opt/airflow/plugins
+        - ${PROD_AIRFLOW_DIR:-.}/dags:/opt/airflow/dags
+        - ${PROD_AIRFLOW_DIR:-.}/logs:/opt/airflow/logs
+        - ${PROD_AIRFLOW_DIR:-.}/config:/opt/airflow/config
+        - ${PROD_AIRFLOW_DIR:-.}/plugins:/opt/airflow/plugins
+
+networks:
+    cryptodata_net:
+        driver: host
+        name: cryptodata_net
 
 services:
     airflow-webserver:
@@ -40,8 +45,10 @@ services:
             interval: 30s
             retries: 5
             start_period: 30s
-            test: ["CMD", "curl", "--fail", "${AIRFLOW_WEBSERVER_TEST_CMD_URL}"]
+            test: ["CMD", "curl", "--fail", "${PROD_AIRFLOW_WEBSERVER_TEST_CMD_URL}"]
             timeout: 10s
+        networks:
+            - cryptodata_net
         ports:
             - "${PROD_AIRFLOW_WEBSERVER_PORT}:8080"
         restart: always
@@ -59,6 +66,8 @@ services:
             start_period: 30s
             test: ["CMD", "curl", "--fail", "${AIRFLOW_SCHEDULER_TEST_CMD_URL}"]
             timeout: 10s
+        networks:
+            - cryptodata_net
         restart: always
 
     airflow-worker:
@@ -79,6 +88,8 @@ services:
             start_period: 30s
             test: ["CMD-SHELL", 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"']
             timeout: 10s
+        networks:
+            - cryptodata_net
         restart: always
 
     airflow-triggerer:
@@ -98,6 +109,8 @@ services:
                     "CMD-SHELL",
                     'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"',
                 ]
+        networks:
+            - cryptodata_net
         restart: always
 
     airflow-init:
@@ -175,6 +188,8 @@ services:
             _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
             _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
             _PIP_ADDITIONAL_REQUIREMENTS: ""
+        networks:
+            - cryptodata_net
         user: "0:0"
         volumes:
             - ${AIRFLOW_DIR:-.}:/sources
@@ -189,8 +204,10 @@ services:
         environment:
             <<: *airflow-common-env
             CONNECTION_CHECK_MAX_COUNT: "0"
+        networks:
+            - cryptodata_net
         profiles:
-            - ${AIRFLOW_CLI_PROFILE}
+            - ${PROD_AIRFLOW_CLI_PROFILE}
 
     airflow_db:
         image: postgres:13
@@ -203,6 +220,8 @@ services:
             interval: 10s
             retries: 5
             start_period: 5s
+        networks:
+            - cryptodata_net
         restart: always
         volumes:
             - airflow_db-volume:/var/lib/postgresql/data
@@ -214,10 +233,12 @@ services:
             POSTGRES_PASSWORD: ${PROD_CLIENT_DB_PASSWD}
             POSTGRES_USER: ${PROD_CLIENT_DB_USER}
         healthcheck:
-            test: [ "CMD", "pg_isready", "-U", "${CLIENT_DB_USER}" ]
+            test: [ "CMD", "pg_isready", "-U", "${PROD_CLIENT_DB_USER}" ]
             interval: 10s
             retries: 5
             start_period: 5s
+        networks:
+            - cryptodata_net
         restart: always
         volumes:
             - client-db-volume:/var/lib/postgresql/data
@@ -232,6 +253,8 @@ services:
         depends_on:
             client_db:
                 condition: service_healthy
+        networks:
+            - cryptodata_net
         volumes:
             - ../db:/home/initdb
 
@@ -243,6 +266,8 @@ services:
             timeout: 30s
             retries: 50
             start_period: 30s
+        networks:
+            - cryptodata_net
         restart: always
 
     zookeeper:
@@ -250,17 +275,17 @@ services:
         environment:
             ZOOKEEPER_CLIENT_PORT: ${PROD_ZOOKEEPER_CLIENT_PORT}
             ZOOKEEPER_TICK_TIME: ${PROD_ZOOKEEPER_TICK_TIME}
+        networks:
+            - cryptodata_net
 
     kafka:
         image: confluentinc/cp-kafka:latest
         depends_on:
             - zookeeper
-        ports:
-            - "${KAFKA_PORT}:9092" # Only expose one port that will be used both internally and externally if needed
         environment:
             KAFKA_BROKER_ID: ${PROD_KAFKA_BROKER_ID}
             KAFKA_ZOOKEEPER_CONNECT: ${PROD_KAFKA_ZOOKEEPER_CONNECT}
-            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: ${PROD_KAFKA_LISTENER_SECURITY_PROTOCOL_MAP}
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: ${KAFKA_LISTENER_SECURITY_PROTOCOL_MAP}
             KAFKA_ADVERTISED_LISTENERS: ${PROD_KAFKA_ADVERTISED_LISTENERS}
             KAFKA_LISTENERS: ${PROD_KAFKA_LISTENERS}
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: ${PROD_KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR}
@@ -269,14 +294,20 @@ services:
           interval: 10s
           timeout: 10s
           retries: 3
+        networks:
+            - cryptodata_net
 
     cryptopanic-scraper:
         image: epitechuser2077/cryptodata:cryptodata-cryptopanic-scraper
         command: ["tail", "-f", "/dev/null"]
+        networks:
+            - cryptodata_net
 
     binance-scraper:
         image: epitechuser2077/cryptodata:cryptodata-binance-scraper
         command: ["tail", "-f", "/dev/null"]
+        networks:
+            - cryptodata_net
 
     scraped_consumer:
         image: epitechuser2077/cryptodata:cryptodata-scraped_consumer
@@ -290,6 +321,8 @@ services:
             POSTGRES_DB: "${PROD_CLIENT_DB_NAME}"
             POSTGRES_PASSWORD: "${PROD_CLIENT_DB_PASSWD}"
             POSTGRES_USER: "${PROD_CLIENT_DB_USER}"
+        networks:
+            - cryptodata_net
         tty: true
         volumes:
             - ../consumers/scraped:/home/consumer
@@ -299,25 +332,25 @@ services:
         ports:
             - "${SPARK_UI_PORT}:8080"
             - "${SPARK_WORKER_PORT}:7077"
+        networks:
+            - cryptodata_net
 
     grafana:
-        image: grafana/grafana-oss:latest
+        image: grafana/grafana-oss:10.2.4-ubuntu
         ports:
             - "${PROD_GRAFANA_PORT}:3000"
         environment:
-            GF_SECURITY_ADMIN_USER: ${GRAFANA_SECURITY_ADMIN_USER}
-            GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_SECURITY_ADMIN_PASSWORD}
-        user: "0:0"
+            GF_SECURITY_ADMIN_USER: ${PROD_GRAFANA_SECURITY_ADMIN_USER}
+            GF_SECURITY_ADMIN_PASSWORD: ${PROD_GRAFANA_SECURITY_ADMIN_PASSWORD}
+        networks:
+            - cryptodata_net
+        user: "0"
         volumes:
-            - ../grafana/conf/grafana.ini:/etc/grafana/grafana.ini
-            - ../grafana/conf/ladp.toml:/etc/grafana/ladp.toml
-            - ../grafana/data:/var/lib/grafana:rw
+            - ../grafana/conf:/etc/grafana
+            - ../grafana/data:/var/lib/grafana
 
     wss:
         image: epitechuser2077/cryptodata:cryptodata-wss
-        volumes:
-            - ../crypto-wss:/srv/app
-        tty: true
         depends_on:
           client_db:
             condition: service_healthy
@@ -326,12 +359,19 @@ services:
             POSTGRES_DB: ${PROD_CLIENT_DB_NAME}
             POSTGRES_PASSWORD: ${PROD_CLIENT_DB_PASSWD}
             POSTGRES_USER: ${PROD_CLIENT_DB_USER}
+        networks:
+            - cryptodata_net
+        tty: true
+        volumes:
+            - ../crypto-wss:/srv/app
 
     docker-proxy:
         image: bobrik/socat
         command: "TCP4-LISTEN:2375,fork,reuseaddr UNIX-CONNECT:/var/run/docker.sock"
+        networks:
+            - cryptodata_net
         ports:
-        - "${PROXY_PORT}:2375"
+        - "${PROXY_PORT:-2375}:2375"
         volumes:
         - /var/run/docker.sock:/var/run/docker.sock
 
